@@ -106,7 +106,7 @@ public class MathsAndStatsTest
     public void max()
     {
         assertNull(MathsAndStats.max(Collections.emptyList()), "empty input");
-        List<Duration> durations = Arrays.asList(Duration.ofDays(1), Duration.ofDays(5), Duration.ofSeconds(30));
+        List<Duration> durations = List.of(Duration.ofDays(1), Duration.ofDays(5), Duration.ofSeconds(30));
         assertEquals(durations.get(1), MathsAndStats.max(durations));
     }
     
@@ -115,9 +115,32 @@ public class MathsAndStatsTest
     {
         BinaryOperator<Integer> interpolator = (n1, n2) -> ((n1 + n2)/ 2);
         assertNull(MathsAndStats.median(Collections.emptyList(), interpolator), "zero length = null");
-        assertEquals(Integer.valueOf(1), MathsAndStats.median(Arrays.asList(1), interpolator), "1 item");
-        assertEquals(Integer.valueOf(2), MathsAndStats.median(Arrays.asList(1, 3), interpolator), "2 items");
-        assertEquals(Integer.valueOf(3), MathsAndStats.median(Arrays.asList(1, 3, 5), interpolator), "3 items");
-        assertEquals(Integer.valueOf(4), MathsAndStats.median(Arrays.asList(1, 3, 5, 7), interpolator), "4 items");
+        assertEquals(Integer.valueOf(1), MathsAndStats.median(List.of(1), interpolator), "1 item");
+        assertEquals(Integer.valueOf(2), MathsAndStats.median(List.of(1, 3), interpolator), "2 items");
+        assertEquals(Integer.valueOf(3), MathsAndStats.median(List.of(1, 3, 5), interpolator), "3 items");
+        assertEquals(Integer.valueOf(4), MathsAndStats.median(List.of(1, 3, 5, 7), interpolator), "4 items");
+    }
+    
+    @Test
+    public void testFormatDuration()
+    {
+        assertEquals("0s", MathsAndStats.formatDuration(Duration.ZERO));
+        assertEquals("1s", MathsAndStats.formatDuration(Duration.ofSeconds(1)));
+        assertEquals("-1s", MathsAndStats.formatDuration(Duration.ofSeconds(-1)));
+        
+        assertEquals("2m 0s", MathsAndStats.formatDuration(Duration.ofSeconds(120)));
+        assertEquals("1m 10s", MathsAndStats.formatDuration(Duration.ofSeconds(70)));
+        assertEquals("-5m 22s", MathsAndStats.formatDuration(Duration.ofSeconds(-322)));
+        
+        assertEquals("1h 0m", MathsAndStats.formatDuration(Duration.ofSeconds(3601)));
+        assertEquals("3h 10m", MathsAndStats.formatDuration(Duration.ofSeconds(3600*3 + 610)));
+        assertEquals("-5h 43m", MathsAndStats.formatDuration(Duration.ofSeconds(-3600*5 - 43*60 - 59)));
+        
+        assertEquals("3d 0h", MathsAndStats.formatDuration(Duration.ofSeconds(86400*3 + 3000)));
+        assertEquals("1d 22h", MathsAndStats.formatDuration(Duration.ofSeconds(86400 + 22*3600 + 542)));
+        assertEquals("-9d 23h", MathsAndStats.formatDuration(Duration.ofSeconds(-863999)));
+        
+        assertEquals("10d", MathsAndStats.formatDuration(Duration.ofSeconds(864000)));
+        assertEquals("-15d", MathsAndStats.formatDuration(Duration.ofSeconds(-86400*15)));
     }
 }
