@@ -42,6 +42,7 @@ public class WikiTest
 
     /**
      *  Construct wiki objects for each test so that tests are independent.
+     *  Don't put network requests here.
      *  @throws Exception if a network error occurs
      */
     public WikiTest() throws Exception
@@ -56,7 +57,6 @@ public class WikiTest
         testWiki.setMaxLag(-1);
         enWikt = Wiki.newSession("en.wiktionary.org");
         enWikt.setMaxLag(-1);
-        enWikt.getSiteInfo();
 
         sha256 = MessageDigest.getInstance("SHA-256");
     }
@@ -109,37 +109,35 @@ public class WikiTest
         enWiki.setAssertionMode(Wiki.ASSERT_USER);
         assertEquals(Wiki.ASSERT_USER, enWiki.getAssertionMode(), "check assertion mode set");
         // This test runs logged out. The following assertions are expected to fail.
-        assertThrows(AssertionError.class, () -> enWiki.getPageText("Main Page"), "ASSERT_USER");
+        List<String> pages = List.of("Main Page");
+        assertThrows(AssertionError.class, () -> enWiki.getPageText(pages).get(0), "ASSERT_USER");
         enWiki.setAssertionMode(Wiki.ASSERT_BOT);
-        assertThrows(AssertionError.class, () -> enWiki.getPageText("Main Page"), "ASSERT_BOT");
+        assertThrows(AssertionError.class, () -> enWiki.getPageText(pages).get(0), "ASSERT_BOT");
         // This only trips on write requests.
         // enWiki.setAssertionMode(Wiki.ASSERT_SYSOP);
         // assertThrows(AssertionError.class, () -> enWiki.getPageText("Main Page"), "ASSERT_SYSOP");
         enWiki.setAssertionMode(Wiki.ASSERT_NONE);
-        enWiki.getPageText("Main Page"); // no exception
+        enWiki.getPageText(pages); // no exception
     }
 
     @Test
     public void setResolveRedirects() throws Exception
     {
-        String[] pages = {
-            "User:MER-C/UnitTests/redirect",
-            "User:MER-C/UnitTests/Delete"
-        };
-
+        List<String> pages = List.of("User:MER-C/UnitTests/redirect",
+            "User:MER-C/UnitTests/Delete");
+        
         testWiki.setResolveRedirects(true);
         enWiki.setResolveRedirects(true);
         assertTrue(testWiki.isResolvingRedirects());
         // https://test.wikipedia.org/w/index.php?title=User:MER-C/UnitTests/redirect&redirect=no
         // redirects to https://test.wikipedia.org/wiki/User:MER-C/UnitTests/Delete
-        assertEquals("This revision is not deleted!", testWiki.getPageText(pages[0]),
+        assertEquals("This revision is not deleted!", testWiki.getPageText(pages).get(0),
             "resolveredirects/getPageText");
-        Map<String, Object>[] x = testWiki.getPageInfo(pages);
-        x[0].remove("inputpagename");
-        x[1].remove("inputpagename");
-        assertEquals(x[1], x[0], "resolveredirects/getPageInfo");
-        pages = new String[] { "Main page", "Main Page" };
-        List<List<String>> y = enWiki.getTemplates(Arrays.asList(pages));
+        List<Map<String, Object>> x = testWiki.getPageInfo(pages);
+        x.get(0).remove("inputpagename");
+        x.get(1).remove("inputpagename");
+        assertEquals(x.get(1), x.get(0), "resolveredirects/getPageInfo");
+        List<List<String>> y = enWiki.getTemplates(List.of("Main page", "Main Page"));
         assertEquals(y.get(1), y.get(0), "resolveredirects/getTemplates");
     }
 
@@ -208,7 +206,7 @@ public class WikiTest
         assertEquals(530, enWiki.getPageHistory("Main Page", null).size(), "after recentchanges override");
         assertEquals(10, enWiki.getLogEntries(Wiki.DELETION_LOG, "delete", rh).size(), "getLogEntries override");
         assertEquals(530, enWiki.getPageHistory("Main Page", null).size(), "after getLogEntries override");
-        assertEquals(500, enWiki.listPages("", null, Wiki.MAIN_NAMESPACE).length, "listPages override");
+        assertEquals(500, enWiki.listPages("", null, Wiki.MAIN_NAMESPACE).size(), "listPages override");
         assertEquals(530, enWiki.getPageHistory("Main Page", null).size(), "after listPages override");
     }
 
@@ -255,7 +253,7 @@ public class WikiTest
     @Test
     public void userExists() throws Exception
     {
-        boolean[] temp = testWiki.userExists(new String[] { "MER-C", "127.0.0.1", "Djskgh;jgsd", "::/1" });
+        boolean[] temp = testWiki.userExists(List.of("MER-C", "127.0.0.1", "Djskgh;jgsd", "::/1"));
         assertTrue(temp[0], "user that exists");
         assertFalse(temp[1], "IP address");
         assertFalse(temp[2], "nonsense input");
@@ -266,14 +264,14 @@ public class WikiTest
     public void changeUserPrivileges() throws Exception
     {
         // check expiry
-        Wiki.User user = enWiki.getUser("Example");
-        List<String> granted = Arrays.asList("autopatrolled");
+        Wiki.User user = enWiki.getUsers(List.of("Example")).get(0);
+        List<String> granted = List.of("autopatrolled");
         assertThrows(IllegalArgumentException.class,
-            () -> enWiki.changeUserPrivileges(user, granted, Arrays.asList(OffsetDateTime.MIN), Collections.emptyList(), "dummy reason"),
+            () -> enWiki.changeUserPrivileges(user, granted, List.of(OffsetDateTime.MIN), Collections.emptyList(), "dummy reason"),
             "attempted to set user privilege expiry in the past");
         // check supply of correct amount of expiry dates
         OffsetDateTime now = OffsetDateTime.now();
-        List<OffsetDateTime> expiries = Arrays.asList(now.plusYears(1), now.plusYears(2));
+        List<OffsetDateTime> expiries = List.of(now.plusYears(1), now.plusYears(2));
         assertThrows(IllegalArgumentException.class,
             () -> enWiki.changeUserPrivileges(user, granted, expiries, Collections.emptyList(), "dummy reason"),
             "attempted to set too many expiry dates");
@@ -313,7 +311,8 @@ public class WikiTest
     @Test
     public void exists() throws Exception
     {
-        String[] titles = new String[] { "Main Page", "Tdkfgjsldf", "User:MER-C", "Wikipedia:Skfjdl", "Main Page", "Fish & chips" };
+        List<String> titles = List.of("Main Page", "Tdkfgjsldf", "User:MER-C", 
+            "Wikipedia:Skfjdl", "Main Page", "Fish & chips");
         boolean[] expected = new boolean[] { true, false, true, false, true, true };
         assertArrayEquals(expected, enWiki.exists(titles));
     }
@@ -321,35 +320,37 @@ public class WikiTest
     @Test
     public void resolveRedirects() throws Exception
     {
-        String[] titles = new String[] { "Main page", "Main Page", "sdkghsdklg", "Hello.jpg", "Main page", "Fish & chips" };
-        String[] expected = new String[] { "Main Page", "Main Page", "sdkghsdklg", "Goatse.cx", "Main Page", "Fish and chips" };
-        assertArrayEquals(expected, enWiki.resolveRedirects(titles));
-        assertEquals("الصفحة الرئيسية", arWiki.resolveRedirect("الصفحه الرئيسيه"), "rtl");
+        List<String> titles = List.of("Main page", "Main Page", "sdkghsdklg", 
+            "Hello.jpg", "Main page", "Fish & chips");
+        List<String> expected = List.of("Main Page", "Main Page", "sdkghsdklg", 
+            "Goatse.cx", "Main Page", "Fish and chips");
+        assertEquals(expected, enWiki.resolveRedirects(titles));
+        assertEquals(List.of("الصفحة الرئيسية"), arWiki.resolveRedirects(List.of("الصفحه الرئيسيه")), "rtl");
     }
 
     @Test
     public void getLinksOnPage() throws Exception
     {
-        assertArrayEquals(new String[0], enWiki.getLinksOnPage("Skfls&jdkfs"), "non-existent page");
+        assertTrue(enWiki.getLinksOnPage("Skfls&jdkfs").isEmpty(), "non-existent page");
         // User:MER-C/monobook.js has one link... despite it being preformatted (?!)
-        assertArrayEquals(new String[0], enWiki.getLinksOnPage("User:MER-C/monobook.css"), "page with no links");
+        assertTrue(enWiki.getLinksOnPage("User:MER-C/monobook.css").isEmpty(), "page with no links");
     }
 
     @Test
     public void getImagesOnPage() throws Exception
     {
         // https://en.wikipedia.org/wiki/Template:POTD/2018-11-01
-        List<String> pages = Arrays.asList("Skflsj&dkfs", "Template:POTD/2018-11-01", "User:MER-C/monobook.js");
+        List<String> pages = List.of("Skflsj&dkfs", "Template:POTD/2018-11-01", "User:MER-C/monobook.js");
         List<List<String>> images = enWiki.getImagesOnPage(pages);
-        assertEquals(Collections.emptyList(), images.get(0), "non-existent page");
-        assertEquals(Arrays.asList("File:Adelie Penguins on iceberg.jpg"), images.get(1));
-        assertEquals(Collections.emptyList(), images.get(2), "page with no images");
+        assertTrue(images.get(0).isEmpty(), "non-existent page");
+        assertEquals(List.of("File:Adelie Penguins on iceberg.jpg"), images.get(1));
+        assertTrue(images.get(2).isEmpty(), "page with no images");
     }
 
     @Test
     public void getTemplates() throws Exception
     {
-        List<String> pages = Arrays.asList(
+        List<String> pages = List.of(
             "sdkf&hsdklj", // non-existent
             // https://test.wikipedia.org/wiki/User:MER-C/UnitTests/templates_test
             "User:MER-C/UnitTests/templates_test",
@@ -357,38 +358,41 @@ public class WikiTest
             "User:MER-C/monobook.js",
             "user:MER-C/UnitTests/templates test"); // same as [1]
         List<List<String>> results = testWiki.getTemplates(pages);
-        assertEquals(Collections.emptyList(), results.get(0), "non-existent page");
+        assertTrue(results.get(0).isEmpty(), "non-existent page");
         assertEquals(1, results.get(1).size());
         assertEquals("Template:La", results.get(1).get(0));
-        assertEquals(Collections.emptyList(), results.get(2), "page with no templates");
+        assertTrue(results.get(2).isEmpty(), "page with no templates");
         assertEquals(results.get(1), results.get(3), "duplicate");
 
-        pages = Arrays.asList(pages.get(1));
-        assertEquals(Collections.emptyList(), testWiki.getTemplates(pages, Wiki.MAIN_NAMESPACE).get(0), "namespace filter");
-        assertEquals(Arrays.asList("Template:La"), testWiki.getTemplates(pages, Wiki.TEMPLATE_NAMESPACE).get(0), "namespace filter");
+        pages = List.of(pages.get(1));
+        assertTrue(testWiki.getTemplates(pages, Wiki.MAIN_NAMESPACE).get(0).isEmpty(), "namespace filter");
+        assertEquals(List.of("Template:La"), testWiki.getTemplates(pages, Wiki.TEMPLATE_NAMESPACE).get(0), "namespace filter");
     }
 
     @Test
     public void getCategories() throws Exception
     {
-        List<String> pages = Arrays.asList("sdkf&hsdklj", "User:MER-C/monobook.js", "Category:~genre~ novels");
+        List<String> pages = List.of("sdkf&hsdklj", "User:MER-C/monobook.js",
+            "Category:Wikipedia articles with undisclosed paid content");
+        List<String> expected2 = List.of("Category:Hidden categories",            
+            "Category:Wikipedia articles with paid content",
+            "Category:Wikipedia maintenance categories sorted by month");
         List<List<String>> actual = enWiki.getCategories(pages, null, false);
         assertTrue(actual.get(0).isEmpty(), "non-existent page");
         assertTrue(actual.get(1).isEmpty(), "page with no categories");
-        assertEquals(actual.get(2), Arrays.asList("Category:Hidden categories"), "page with one category");
+        assertEquals(expected2, actual.get(2), "page with three categories");
 
-        Map<String, Boolean> options = new HashMap<>();
-        options.put("hidden", Boolean.FALSE);
-        Wiki.RequestHelper rh = enWiki.new RequestHelper().filterBy(options);
-        actual = enWiki.getCategories(Arrays.asList("Category:~genre~ novels"), rh, false);
-        assertTrue(actual.get(0).isEmpty(), "filter hidden categories");
+        Wiki.RequestHelper rh = enWiki.new RequestHelper()
+            .filterBy(Map.of("hidden", Boolean.FALSE));
+        actual = enWiki.getCategories(List.of("Category:Wikipedia articles with undisclosed paid content"), rh, false);
+        assertEquals(expected2.subList(1, 3), actual.get(0), "filter hidden categories");
     }
 
     @Test
     public void getImageHistory() throws Exception
     {
-        assertArrayEquals(new Wiki.LogEntry[0], enWiki.getImageHistory("File:Sdfjgh&sld.jpg"), "non-existent file");
-        assertArrayEquals(new Wiki.LogEntry[0], enWiki.getImageHistory("File:WikipediaSignpostIcon.svg"), "commons image");
+        assertTrue(enWiki.getImageHistory("File:Sdfjgh&sld.jpg").isEmpty(), "non-existent file");
+        assertTrue(enWiki.getImageHistory("File:WikipediaSignpostIcon.svg").isEmpty(), "commons image");
     }
 
     @Test
@@ -402,7 +406,7 @@ public class WikiTest
         enWiki.getImage("File:Portrait of Jupiter from Cassini.jpg", tempfile);
         byte[] imageData = Files.readAllBytes(tempfile.toPath());
         byte[] hash = sha256.digest(imageData);
-        assertEquals("fc63c250bfce3f3511ccd144ca99b451111920c100ac55aaf3381aec98582035",
+        assertEquals("8fcc49c1e86ce65a5f1cd7d39da314315114f13c845ac2ac3532b5f85ae88af7",
             String.format("%064x", new BigInteger(1, hash)));
         Files.delete(tempfile.toPath());
     }
@@ -526,13 +530,13 @@ public class WikiTest
             .byTitle("File:Wiki.java test5.jpg")
             .withinDateRange(OffsetDateTime.parse("2018-03-16T00:00:00Z"), OffsetDateTime.parse("2018-03-18T00:00:00Z"));
         List<Wiki.LogEntry> logs = testWiki.getLogEntries(Wiki.DELETION_LOG, "delete", rh);
-        List<Wiki.Event> events = Arrays.asList(revision, logs.get(0));
+        List<Wiki.Event> events = List.of(revision, logs.get(0));
         assertThrows(IllegalArgumentException.class,
             () -> testWiki.revisionDelete(Boolean.TRUE, Boolean.TRUE, Boolean.TRUE, "Not a reason", Boolean.FALSE, events),
             "can't mix revisions and log entries in RevisionDelete");
         // Test runs without logging in, therefore expect failure.
         assertThrows(SecurityException.class,
-            () -> testWiki.revisionDelete(Boolean.TRUE, Boolean.TRUE, Boolean.TRUE, "Not a reason", Boolean.FALSE, Arrays.asList(revision)),
+            () -> testWiki.revisionDelete(Boolean.TRUE, Boolean.TRUE, Boolean.TRUE, "Not a reason", Boolean.FALSE, List.of(revision)),
             "attempted to RevisionDelete while logged out");
     }
 
@@ -626,31 +630,31 @@ public class WikiTest
     @Test
     public void getPageInfo() throws Exception
     {
-        String[] pages = new String[] { "Main Page", "IPod", "Main_Page", "Special:Specialpages" };
-        Map<String, Object>[] pageinfo = enWiki.getPageInfo(pages);
+        List<String> pages = List.of("Main Page", "IPod", "Main_Page", "Special:Specialpages");
+        List<Map<String, Object>> pageinfo = enWiki.getPageInfo(pages);
 
         // Main Page
-        Map<String, Object> protection = (Map<String, Object>)pageinfo[0].get("protection");
+        Map<String, Object> protection = (Map<String, Object>)pageinfo.get(0).get("protection");
         assertEquals(Wiki.FULL_PROTECTION, protection.get("edit"), "Main Page edit protection level");
         assertNull(protection.get("editexpiry"), "Main Page edit protection expiry");
         assertEquals(Wiki.FULL_PROTECTION, protection.get("move"), "Main Page move protection level");
         assertNull(protection.get("moveexpiry"), "Main Page move protection expiry");
         assertTrue((Boolean)protection.get("cascade"), "Main Page cascade protection");
-        assertEquals("Main Page", pageinfo[0].get("displaytitle"), "Main Page display title");
-        assertEquals(pages[0], pageinfo[0].get("inputpagename"), "inputpagename");
-        assertEquals(pages[0], pageinfo[0].get("pagename"), "normalized identity");
+        assertEquals("Main Page", pageinfo.get(0).get("displaytitle"), "Main Page display title");
+        assertEquals(pages.get(0), pageinfo.get(0).get("inputpagename"), "inputpagename");
+        assertEquals(pages.get(0), pageinfo.get(0).get("pagename"), "normalized identity");
 
         // different display title
-        assertEquals("iPod", pageinfo[1].get("displaytitle"), "iPod display title");
+        assertEquals("iPod", pageinfo.get(1).get("displaytitle"), "iPod display title");
 
         // Main_Page (duplicate, should be identical except for inputpagename)
-        assertEquals(pages[2], pageinfo[2].get("inputpagename"), "identity");
-        pageinfo[0].remove("inputpagename");
-        pageinfo[2].remove("inputpagename");
-        assertEquals(pageinfo[0], pageinfo[2], "duplicate");
+        assertEquals(pages.get(2), pageinfo.get(2).get("inputpagename"), "identity");
+        pageinfo.get(0).remove("inputpagename");
+        pageinfo.get(2).remove("inputpagename");
+        assertEquals(pageinfo.get(0), pageinfo.get(2), "duplicate");
 
         // Special page = return null
-        assertNull(pageinfo[3], "special page");
+        assertNull(pageinfo.get(3), "special page");
     }
 
     @Test
@@ -658,7 +662,7 @@ public class WikiTest
     {
         // highly volatile content, so not amenable to unit testing
         // but can check clear zero categories and title rewrites
-        List<int[]> results = testWiki.getCategoryMemberCounts(Arrays.asList("Category:Testssss",
+        List<int[]> results = testWiki.getCategoryMemberCounts(List.of("Category:Testssss",
             "Wikipedia noticeboards", "Category:Wikipedia noticeboards"));
         assertArrayEquals(new int[] {0, 0, 0, 0}, results.get(0), "non-existent category");
         assertArrayEquals(results.get(2), results.get(1), "check title rewrite");
@@ -677,26 +681,33 @@ public class WikiTest
     @Test
     public void getDuplicates() throws Exception
     {
-        assertArrayEquals(new String[0], enWiki.getDuplicates("File:Sdfj&ghsld.jpg"), "non-existent file");
+        assertTrue(enWiki.getDuplicates("File:Sdfj&ghsld.jpg").isEmpty(), "non-existent file");
     }
 
     @Test
     public void getInterWikiLinks() throws Exception
     {
-        Map<String, String> temp = enWiki.getInterWikiLinks("Gkdfkkl&djfdf");
-        assertTrue(temp.isEmpty(), "non-existent page");
+        List<String> inputs = List.of("Test", "Gkdfkkl&djfdf", "Blah", "Test", "Albert Einstein");        
+        var result = enWiki.getInterWikiLinks(inputs);
+        
+        assertTrue(result.get(1).isEmpty(), "non-existing page");
+        assertEquals(result.get(0), result.get(3), "check duplicate removal");
+        // quick functionality verification
+        assertEquals(result.get(0).get("ja"), "テスト");
+        assertEquals(result.get(2).get("tr"), "Bla Bla Bla");
+        assertEquals(result.get(4).get("zh"), "阿尔伯特·爱因斯坦");
     }
 
     @Test
     public void getExternalLinksOnPages() throws Exception
     {
-        List<List<String>> links = enWiki.getExternalLinksOnPage(Arrays.asList("Gdkgfskl&dkf", "User:MER-C/monobook.js"));
+        List<List<String>> links = enWiki.getExternalLinksOnPage(List.of("Gdkgfskl&dkf", "User:MER-C/monobook.js"));
         assertTrue(links.get(0).isEmpty(), "non-existent page");
         assertTrue(links.get(1).isEmpty(), "page with no links");
 
         // https://test.wikipedia.org/wiki/User:MER-C/UnitTests/Linkfinder
-        links = testWiki.getExternalLinksOnPage(Arrays.asList("User:MER-C/UnitTests/Linkfinder"));
-        List<String> expected = Arrays.asList("http://spam.example.com", "http://www.example.net", "https://en.wikipedia.org");
+        links = testWiki.getExternalLinksOnPage(List.of("User:MER-C/UnitTests/Linkfinder"));
+        List<String> expected = List.of("http://spam.example.com", "http://www.example.net", "https://en.wikipedia.org");
         assertEquals(expected, links.get(0));
     }
 
@@ -782,12 +793,11 @@ public class WikiTest
     @Test
     public void pageHasTemplate() throws Exception
     {
-        boolean[] b = enWiki.pageHasTemplate(new String[]
-        {
+        boolean[] b = enWiki.pageHasTemplate(List.of(
             "Wikipedia:Articles for deletion/Log/2016 September 20",
             "Main Page",
             "dsigusodgusdigusd" // non-existent, should be false
-        }, "Wikipedia:Articles for deletion/FMJAM");
+        ), "Wikipedia:Articles for deletion/FMJAM");
         assertTrue(b[0]);
         assertFalse(b[1]);
         assertFalse(b[2], "non-existent page");
@@ -797,45 +807,50 @@ public class WikiTest
     public void whatLinksHere() throws Exception
     {
         // general test (generally too non-deterministic for functionality testing)
-        List<String> titles = Arrays.asList("Empty page title 1234");
-        List<List<String>> results = enWiki.whatLinksHere(titles, false);
+        List<List<String>> results = enWiki.whatLinksHere(List.of("Empty page title 1234"), false, false);
         assertEquals(1, results.size());
-        assertEquals(Collections.emptyList(), results.get(0));
+        assertTrue(results.get(0).isEmpty());
         
         // check namespace filtering (can test functionality here)
-        titles = Arrays.asList("Wikipedia:Featured picture candidates");
-        results = enWiki.whatLinksHere(titles, false, Wiki.MAIN_NAMESPACE);
-        assertEquals(Arrays.asList("Wikipedia community", "Featured picture candidates", 
+        List<String> titles = List.of("Wikipedia:Featured picture candidates");
+        results = enWiki.whatLinksHere(titles, false, false, Wiki.MAIN_NAMESPACE);
+        assertEquals(List.of("Wikipedia community", "Featured picture candidates", 
             "Featured picture candidate"), results.get(0), "namespace filter");
         
         // check redirect filtering
-        results = enWiki.whatLinksHere(titles, true, Wiki.MAIN_NAMESPACE);
-        assertEquals(Arrays.asList("Featured picture candidates", "Featured picture candidate"),
-            results.get(0), "namespace filter");        
+        results = enWiki.whatLinksHere(titles, true, false, Wiki.MAIN_NAMESPACE);
+        assertEquals(List.of("Featured picture candidates", "Featured picture candidate"),
+            results.get(0), "namespace filter");
+        
+        // check adding redirects to results
+        results = testWiki.whatLinksHere(List.of("Main Page"), false, false, Wiki.HELP_NAMESPACE);
+        assertFalse(results.get(0).contains("Help:Wiki markup"));
+        results = testWiki.whatLinksHere(List.of("Main Page"), false, true, Wiki.HELP_NAMESPACE);
+        assertTrue(results.get(0).contains("Help:Wiki markup"));
     }
 
     @Test
     public void whatTranscludesHere() throws Exception
     {
-        List<String> titles = Arrays.asList("Wikipedia:Articles for deletion/MegaMeeting.com", "Empty page title 1234",
+        List<String> titles = List.of("Wikipedia:Articles for deletion/MegaMeeting.com", "Empty page title 1234",
             "Wikipedia:Articles for deletion/PolymerUpdate", "Wikipedia:Articles for deletion/Mobtown Studios");
         List<List<String>> results = enWiki.whatTranscludesHere(titles);
         assertEquals(4, results.size());
-        assertEquals(Arrays.asList("Wikipedia:Articles for deletion/Log/2018 April 23"), results.get(0));
-        assertEquals(Collections.emptyList(), results.get(1));
-        assertEquals(Arrays.asList("Wikipedia:Articles for deletion/Log/2018 April 22"), results.get(2));
-        assertEquals(Arrays.asList("Wikipedia:Articles for deletion/Log/2018 April 24"), results.get(3));
-        titles = Arrays.asList("Wikipedia:Articles for deletion/MegaMeeting.com");
-        assertEquals(Collections.emptyList(), enWiki.whatTranscludesHere(titles, Wiki.MAIN_NAMESPACE).get(0), "namespace filter");
+        assertEquals(List.of("Wikipedia:Articles for deletion/Log/2018 April 23"), results.get(0));
+        assertTrue(results.get(1).isEmpty());
+        assertEquals(List.of("Wikipedia:Articles for deletion/Log/2018 April 22"), results.get(2));
+        assertEquals(List.of("Wikipedia:Articles for deletion/Log/2018 April 24"), results.get(3));
+        titles = List.of("Wikipedia:Articles for deletion/MegaMeeting.com");
+        assertTrue(enWiki.whatTranscludesHere(titles, Wiki.MAIN_NAMESPACE).get(0).isEmpty(), "namespace filter");
     }
 
     @Test
     public void getUploads() throws Exception
     {
-        List<Wiki.User> users = enWiki.getUsers(Arrays.asList(
+        List<Wiki.User> users = enWiki.getUsers(List.of(
             "LakeishaDurham0", // blocked spambot
             "Mifter")); // https://en.wikipedia.org/wiki/Special:ListFiles/Mifter
-        assertEquals(Collections.emptyList(), enWiki.getUploads(users.get(0), null), "no uploads");
+        assertTrue(enWiki.getUploads(users.get(0), null).isEmpty(), "no uploads");
         OffsetDateTime odt = OffsetDateTime.parse("2017-03-05T17:59:00Z");
         Wiki.RequestHelper rh = enWiki.new RequestHelper().withinDateRange(odt, odt.plusMinutes(20));
         List<Wiki.LogEntry> results = enWiki.getUploads(users.get(1), rh);
@@ -893,43 +908,32 @@ public class WikiTest
     public void diff() throws Exception
     {
         // must specify from/to content
-        Map<String, Object> from = new HashMap<>();
-        Map<String, Object> to = new HashMap<>();
         try
         {
-            from.put("xxx", "yyy");
-            to.put("revid", 738178354L);
-            enWiki.diff(from, to);
+            enWiki.diff(Map.of("xxx", "yyy"), Map.of("revid", 738178354L));
             fail("Failed to specify from content.");
         }
         catch (IllegalArgumentException | NoSuchElementException expected)
         {
         }
-        from.clear();
-        to.clear();
         try
         {
-            from.put("revid", 738178354L);
-            to.put("xxx", "yyy");
-            enWiki.diff(from, to);
+            enWiki.diff(Map.of("revid", 738178354L), Map.of("xxx", "yyy"));
             fail("Failed to specify to content.");
         }
         catch (IllegalArgumentException | NoSuchElementException expected)
         {
-            to.clear();
         }
 
         // https://en.wikipedia.org/w/index.php?title=Dayo_Israel&oldid=738178354&diff=prev
-        from.put("revid", 738178354L);
-        to.put("revid", Wiki.PREVIOUS_REVISION);
-        String diff = enWiki.diff(from, to).replaceAll("<!--.*-->", "").trim();
+        String diff = enWiki.diff(Map.of("revid", 738178354L), Map.of("revid", Wiki.PREVIOUS_REVISION))
+            .replaceAll("<!--.*-->", "").trim();
         assertEquals("", diff, "dummy edit");
         // https://en.wikipedia.org/w/index.php?title=Source_Filmmaker&diff=804972897&oldid=803731343
         // The MediaWiki API does not distinguish between a dummy edit and no
         // difference. Both are now set to the empty string.
-        from.put("revid", 803731343L);
-        to.put("revid", 804972897L);
-        diff = enWiki.diff(from, to).replaceAll("<!--.*-->", "").trim();
+        diff = enWiki.diff(Map.of("revid", 803731343L), Map.of("revid", 804972897L))
+            .replaceAll("<!--.*-->", "").trim();
         assertEquals("", diff, "no difference");
         // no deleted pages allowed
         // FIXME: broken because makeHTTPRequest() swallows the API error
@@ -938,23 +942,17 @@ public class WikiTest
         // actual = enWiki.diff(null, 804972897L, null, "Create a page", 0L, null);
         // no RevisionDeleted revisions allowed (also broken)
         // https://en.wikipedia.org/w/index.php?title=Imran_Khan_%28singer%29&oldid=596714684
-        // from.put("revid", 596714684L);
-        // to.put("revid", Wiki.NEXT_REVISION);
-        // assertNull(enWiki.diff(from, to), "from deleted revision);
+        // assertNull(enWiki.diff(Map.of("revid", 596714684L), Map.of("revid", Wiki.NEXT_REVISION), "from deleted revision);
 
         // bad revids
-        from.put("revid", 1L << 62);
-        to.put("revid", 803731343L);
-        assertNull(enWiki.diff(from, to), "bad from revid");
-        from.put("revid", 803731343L);
-        to.put("revid", 1L << 62);
-        assertNull(enWiki.diff(from, to), "bad to revid");
+        assertNull(enWiki.diff(Map.of("revid", 1L << 62), Map.of("revid", 803731343L)), "bad from revid");
+        assertNull(enWiki.diff(Map.of("revid", 803731343L), Map.of("revid", 1L << 62)), "bad to revid");
     }
 
     @Test
     public void contribs() throws Exception
     {
-        List<String> users = Arrays.asList(
+        List<String> users = List.of(
             "Dsdlgfkjsdlkfdjilgsujilvjcl", // should not exist
             "0.0.0.0", // IP address
             "Allancake" // revision deleted
@@ -974,13 +972,10 @@ public class WikiTest
 
         // check rcoptions and namespace filter
         // https://test.wikipedia.org/wiki/Blah_blah_2
-        Map<String, Boolean> options = new HashMap<>();
-        options.put("new", Boolean.TRUE);
-        options.put("top", Boolean.TRUE);
         Wiki.RequestHelper rh = testWiki.new RequestHelper()
             .inNamespaces(Wiki.MAIN_NAMESPACE)
-            .filterBy(options);
-        edits = testWiki.contribs(Arrays.asList("MER-C"), null, rh);
+            .filterBy(Map.of("new", Boolean.TRUE, "top", Boolean.TRUE));
+        edits = testWiki.contribs(List.of("MER-C"), null, rh);
         assertEquals(120919L, edits.get(0).get(0).getID(), "filtered");
         // not implemented in MediaWiki API
         // assertEquals("bcdb66a63846bacdf39f5c52a7d2cc5293dbde3e", edits.get(0).get(0).getSha1());
@@ -991,7 +986,7 @@ public class WikiTest
     @Test
     public void getUsers() throws Exception
     {
-        List<String> usernames = Arrays.asList(
+        List<String> usernames = List.of(
             "127.0.0.1", // IP address
             "MER-C",
             "DKdsf;lksd", // should be non-existent...
@@ -1011,12 +1006,12 @@ public class WikiTest
         // assertFalse(users[1].canBeEmailed());
 
         List<String> groups = users.get(1).getGroups();
-        List<String> temp = Arrays.asList("*", "autoconfirmed", "user", "sysop");
+        List<String> temp = List.of("*", "autoconfirmed", "user", "sysop");
         assertTrue(groups.containsAll(temp));
 
         // check (subset of) rights
         List<String> rights = users.get(1).getRights();
-        temp = Arrays.asList("apihighlimits", "delete", "block", "editinterface");
+        temp = List.of("apihighlimits", "delete", "block", "editinterface");
         assertTrue(rights.containsAll(temp));
 
         assertEquals(usernames.get(3), users.get(3).getUsername());
@@ -1028,33 +1023,31 @@ public class WikiTest
     public void getPageText() throws Exception
     {
         assertThrows(UnsupportedOperationException.class,
-            () -> testWiki.getPageText("Special:Specialpages"),
+            () -> testWiki.getPageText(List.of("Special:Specialpages")),
             "Tried to get page text for a special page!");
         assertThrows(UnsupportedOperationException.class,
-            () -> testWiki.getPageText("Media:Example.png"),
+            () -> testWiki.getPageText(List.of("Media:Example.png")),
             "Tried to get page text for a media page!");
 
-        String[] text = testWiki.getPageText(new String[]
-        {
+        List<String> text = testWiki.getPageText(List.of(
             "User:MER-C/UnitTests/Delete", // https://test.wikipedia.org/wiki/User:MER-C/UnitTests/Delete
             "User:MER-C/UnitTests/pagetext", // https://test.wikipedia.org/wiki/User:MER-C/UnitTests/pagetext
             "Gsgdksgjdsg", // https://test.wikipedia.org/wiki/Gsgdksgjdsg (does not exist)
             "User:NikiWiki/EmptyPage" // https://test.wikipedia.org/wiki/User:NikiWiki/EmptyPage (empty)
-
-        });
+        ));
         // API result does not include the terminating new line
-        assertEquals("This revision is not deleted!", text[0]);
+        assertEquals("This revision is not deleted!", text.get(0));
         assertEquals("&#039;&#039;italic&#039;&#039;\n'''&amp;'''\n&&\n&lt;&gt;\n<>\n&quot;",
-            text[1], "decoding");
-        assertNull(text[2], "non-existent page");
-        assertEquals("", text[3], "empty page");
+            text.get(1), "decoding");
+        assertNull(text.get(2), "non-existent page");
+        assertEquals("", text.get(3), "empty page");
     }
 
     @Test
     public void getText() throws Exception
     {
-        assertEquals(0, testWiki.getText(new String[0], null, -1).length);
-        assertEquals(0, testWiki.getText(null, new long[0], -1).length);
+        assertTrue(testWiki.getText(Collections.emptyList(), null, -1).isEmpty());
+        assertTrue(testWiki.getText(null, new long[0], -1).isEmpty());
 
         long[] ids =
         {
@@ -1064,30 +1057,24 @@ public class WikiTest
             316531L, // https://test.wikipedia.org/w/index.php?oldid=316531 (first revision on same page)
             316533L  // https://test.wikipedia.org/w/index.php?oldid=316533 (second revision on same page)
         };
-        String[] text = testWiki.getText(null, ids, -1);
+        List<String> text = testWiki.getText(null, ids, -1);
         assertEquals("&#039;&#039;italic&#039;&#039;\n'''&amp;'''\n&&\n&lt;&gt;\n<>\n&quot;",
-            text[0], "decoding");
-        assertEquals("", text[1], "empty revision");
-        assertNull(text[2], "content deleted");
-        assertEquals("Testing 0.2786153173518522", text[3], "same page");
-        assertEquals("Testing 0.28713760508426645", text[4], "same page");
+            text.get(0), "decoding");
+        assertEquals("", text.get(1), "empty revision");
+        assertNull(text.get(2), "content deleted");
+        assertEquals("Testing 0.2786153173518522", text.get(3), "same page");
+        assertEquals("Testing 0.28713760508426645", text.get(4), "same page");
     }
 
     @Test
     public void parse() throws Exception
     {
-        HashMap<String, Object> content = new HashMap<>();
-        content.put("title", "Hello");
-        assertNull(enWiki.parse(content, 50, true), "no such section");
+        assertNull(enWiki.parse(Map.of("title", "Hello"), 50, true), "no such section");
         // FIXME: currently broken because makeHTTPRequest swallows the API error
-        // content.put("title", "Create a page");
-        // assertNull(enWiki.parse(content, -1, true), "deleted page);
-        content.clear();
-        content.put("revid", 1L << 62);
-        assertNull(enWiki.parse(content, -1, true), "bad revid");
+        // assertNull(enWiki.parse(Map.of("title", "Create a page"), -1, true), "deleted page");
+        assertNull(enWiki.parse(Map.of("revid", 1L << 62), -1, true), "bad revid");
         // https://en.wikipedia.org/w/index.php?oldid=596714684
-        content.put("revid", 596714684L);
-        assertThrows(SecurityException.class, () -> enWiki.parse(content, -1, true),
+        assertThrows(SecurityException.class, () -> enWiki.parse(Map.of("revid", 596714684L), -1, true),
             "RevisionDeleted revision, no access");
 
         try
@@ -1103,12 +1090,12 @@ public class WikiTest
     @Test
     public void search() throws Exception
     {
-        Map<String, Object>[] results = testWiki.search("dlgsjdglsjdgljsgljsdlg", Wiki.MEDIAWIKI_NAMESPACE);
-        assertEquals(0, results.length, "no results");
+        List<Map<String, Object>> results = testWiki.search("dlgsjdglsjdgljsgljsdlg", Wiki.MEDIAWIKI_NAMESPACE);
+        assertTrue(results.isEmpty(), "no results");
         // https://test.wikipedia.org/w/api.php?action=query&list=search&srsearch=User:%20subpageof:MER-C/UnitTests%20revision%20delete
         results = testWiki.search("User: subpageof:MER-C/UnitTests revision delete", Wiki.USER_NAMESPACE);
-        assertEquals(2, results.length, "result count");
-        Map<String, Object> result = results[0];
+        assertEquals(2, results.size(), "result count");
+        Map<String, Object> result = results.get(0);
         assertEquals("User:MER-C/UnitTests/Delete", result.get("title"), "title");
         assertEquals("This <span class=\"searchmatch\">revision</span> is not <span class=\"searchmatch\">deleted</span>!",
             result.get("snippet"), "snippet");
@@ -1134,10 +1121,7 @@ public class WikiTest
         for (Wiki.Revision rev : rc)
             assertEquals(Wiki.TALK_NAMESPACE, enWiki.namespace(rev.getTitle()), "test namespace filter");
         // check options filtering
-        Map<String, Boolean> options = new HashMap<>();
-        options.put("minor", Boolean.FALSE);
-        options.put("bot", Boolean.TRUE);
-        rh = rh.filterBy(options);
+        rh = rh.filterBy(Map.of("minor", Boolean.FALSE, "bot", Boolean.TRUE));
         rc = enWiki.recentChanges(rh);
         for (Wiki.Revision rev : rc)
         {
@@ -1149,14 +1133,14 @@ public class WikiTest
     @Test
     public void allUsersInGroup() throws Exception
     {
-        assertArrayEquals(new String[0], testWiki.allUsersInGroup("sdfkd|&"), "invalid input");
-        assertArrayEquals(new String[] { "Jimbo Wales" }, enWiki.allUsersInGroup("founder"));
+        assertTrue(testWiki.allUsersInGroup("sdfkd|&").isEmpty(), "invalid input");
+        assertEquals(List.of("Jimbo Wales"), enWiki.allUsersInGroup("founder"));
     }
 
     @Test
     public void allUserswithRight() throws Exception
     {
-        assertArrayEquals(new String[0], testWiki.allUsersWithRight("sdfkd|&"), "invalid input");
+        assertTrue(testWiki.allUsersWithRight("sdfkd|&").isEmpty(), "invalid input");
     }
 
     @Test
@@ -1168,10 +1152,12 @@ public class WikiTest
     @Test
     public void constructTitleString() throws Exception
     {
-        String[] titles = new String[102];
-        for (int i = 0; i < titles.length; i++)
-            titles[i] = "a" + i;
-        titles[101] = "A34"; // should be removed
+        List<String> titles = new ArrayList<>();
+        for (int i = 0; i < 101; i++)
+            titles.add("a" + i);
+        // duplicates should be removed
+        for (int i = 0; i < 101; i++)
+            titles.add("A" + i);
         List<String> expected = new ArrayList<>();
         // slowmax == 50 for Wikimedia wikis if not logged in
         expected.add("A0|A1|A10|A100|A11|A12|A13|A14|A15|A16|A17|A18|A19|A2|" +
@@ -1194,10 +1180,10 @@ public class WikiTest
     {
         // https://en.wikipedia.org/w/index.php?title=Azerbaijan&offset=20180125204500&action=history
         long[] oldids = { 822342083L, 822341440L };
-        Wiki.Revision[] revisions = enWiki.getRevisions(oldids);
-        assertEquals(0, revisions[0].compareTo(revisions[0]), "self");
-        assertTrue(revisions[1].compareTo(revisions[0]) < 0, "before");
-        assertTrue(revisions[0].compareTo(revisions[1]) > 0, "after");
+        List<Wiki.Revision> revisions = enWiki.getRevisions(oldids);
+        assertEquals(0, revisions.get(0).compareTo(revisions.get(0)), "self");
+        assertTrue(revisions.get(1).compareTo(revisions.get(0)) < 0, "before");
+        assertTrue(revisions.get(0).compareTo(revisions.get(1)) > 0, "after");
     }
 
     @Test
@@ -1232,7 +1218,7 @@ public class WikiTest
     @Test
     public void userIsAllowedTo() throws Exception
     {
-        Wiki.User user = enWiki.getUser("LornaIln046035"); // spambot
+        Wiki.User user = enWiki.getUsers(List.of("LornaIln046035")).get(0); // spambot
         assertTrue(user.isAllowedTo("read"));
         assertFalse(user.isAllowedTo("checkuser"));
         assertFalse(user.isAllowedTo("sdlkghsdlkgsd"));
@@ -1241,7 +1227,7 @@ public class WikiTest
     @Test
     public void userIsA() throws Exception
     {
-        Wiki.User me = testWiki.getUser("MER-C");
+        Wiki.User me = testWiki.getUsers(List.of("MER-C")).get(0);
         assertTrue(me.isA("sysop"));
         assertFalse(me.isA("founder"));
         assertFalse(me.isA("sdlkghsdlkgsd"));
