@@ -20,10 +20,10 @@
 
 package org.wikipedia;
 
+import java.util.*;
+
 import org.junit.jupiter.api.*;
 import static org.junit.jupiter.api.Assertions.*;
-
-import java.util.Arrays;
 
 /**
  *  Unit tests for org.wikipedia.ParserUtils
@@ -47,9 +47,16 @@ public class WikitextUtilsTest
     @Test
     public void parseWikilink()
     {
-        assertEquals(Arrays.asList("Link", "Link"), WikitextUtils.parseWikilink("[[ Link ]]"));
-        assertEquals(Arrays.asList("Link", "Link"), WikitextUtils.parseWikilink("[[:Link]]"));
-        assertEquals(Arrays.asList("Link", "Description"), WikitextUtils.parseWikilink("[[ Link | Description ]]"));
-        assertEquals(Arrays.asList("Link", "Description"), WikitextUtils.parseWikilink("[[:Link|Description]]"));
+        assertEquals(List.of("Link", "Link"), WikitextUtils.parseWikilink("[[ Link ]]"));
+        assertEquals(List.of("Link", "Link"), WikitextUtils.parseWikilink("[[:Link]]"));
+        assertEquals(List.of("Link", "Description"), WikitextUtils.parseWikilink("[[ Link | Description ]]"));
+        assertEquals(List.of("Link", "Description"), WikitextUtils.parseWikilink("[[:Link|Description]]"));
+    }
+    
+    @Test
+    public void addTableRow()
+    {
+        List<String> cells = List.of("A", "B", "C");
+        assertEquals("|-\n| A || B || C\n", WikitextUtils.addTableRow(cells));
     }
 }
